--- a/package.json
+++ b/package.json
@@ -9,17 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.26.0",
+    "@types/common-tags": "^1.8.1",
+    "@types/mdast": "^3.0.11",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@types/uuid": "^9.0.2",
+    "@xenova/transformers": "^2.3.1",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "common-tags": "^1.8.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "github-slugger": "^2.0.0",
+    "gpt3-tokenizer": "^1.1.5",
+    "mdast": "^3.0.0",
+    "mdast-util-from-markdown": "^1.3.1",
+    "mdast-util-to-markdown": "^1.5.0",
     "next": "13.4.8",
+    "openai": "^3.3.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "unist-builder": "^3.0.1",
+    "unist-util-filter": "^4.0.1",
+    "uuid": "^9.0.0"
   }
 }
