--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@supabase/supabase-js": "^2.26.0",
     "@types/common-tags": "^1.8.1",
     "@types/mdast": "^3.0.11",
@@ -32,6 +33,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
