--- a/package.json
+++ b/package.json
@@ -35,10 +35,16 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-select": "^5.7.3",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "unist-builder": "^3.0.1",
     "unist-util-filter": "^4.0.1",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "tailwindcss-dotted-background": "^1.1.0"
   }
 }
